src/test/ui/rfc-2093-infer-outlives/regions-enum-not-wf.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:18:18
   |
LL | enum Ref1<'a, T> {
   |               - help: consider adding an explicit lifetime bound `T: 'a`...
LL |     Ref1Variant1(RequireOutlives<'a, T>)
   |                  ^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...so that the type `T` will meet its required lifetime bounds
  --> $DIR/regions-enum-not-wf.rs:18:18
   |
LL |     Ref1Variant1(RequireOutlives<'a, T>)
   |                  ^^^^^^^^^^^^^^^^^^^^^^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:23:25
   |
LL | enum Ref2<'a, T> {
   |               - help: consider adding an explicit lifetime bound `T: 'a`...
LL |     Ref2Variant1,
LL |     Ref2Variant2(isize, RequireOutlives<'a, T>),
   |                         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...so that the type `T` will meet its required lifetime bounds
  --> $DIR/regions-enum-not-wf.rs:23:25
   |
LL |     Ref2Variant2(isize, RequireOutlives<'a, T>),
   |                         ^^^^^^^^^^^^^^^^^^^^^^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:35:1
   |
LL |   enum RefDouble<'a, 'b, T> {
   |   ^                      - help: consider adding an explicit lifetime bound `T: 'b`...
   |  _|
   | |
LL | |     RefDoubleVariant1(&'a RequireOutlives<'b, T>)
LL | |
LL | | }
   | |_^
   |
note: ...so that the type `T` will meet its required lifetime bounds
  --> $DIR/regions-enum-not-wf.rs:35:1
   |
LL | / enum RefDouble<'a, 'b, T> {
LL | |     RefDoubleVariant1(&'a RequireOutlives<'b, T>)
LL | |
LL | | }
   | |_^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:36:23
   |
LL | enum RefDouble<'a, 'b, T> {
   |                        - help: consider adding an explicit lifetime bound `T: 'b`...
LL |     RefDoubleVariant1(&'a RequireOutlives<'b, T>)
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...so that the type `T` will meet its required lifetime bounds
  --> $DIR/regions-enum-not-wf.rs:36:23
   |
LL |     RefDoubleVariant1(&'a RequireOutlives<'b, T>)
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0309`.
